webdav/pool: support RFC 3230 headers with multiple checksum algorithms
Motivation:

Support HTTP clients that need to know the checksums of a file generated
using multiple algorithms.

Modification:

Update QualityValue to support an optional mapping.  Add new unit-tests
to verify correct behaviour.

Update RFC3230 string parsing to support multiple algorithms.  Update
unit tests to match new API and (where appropriate) new behaviour.  Add
some additional unit tests to verify case insensitivity.

Update WebDAV door to send multiple checksums to pool if `Want-Digest`
is specified on HTTP PUT or COPY (HTTP-TPC) requests and the request
header value contains multiple (supported) algorithms with the same
q-value.  Door will inform client of requested checksum values; for
HTTP-TPC requests, this requires the client to support response
trailers.

Update pool to calculate multiple checksum algorithms if clients
includes a `Want-Digest` header on HTTP PUT request with multiple
(supported) algorithms with the same q-value (assuming door redirects
client to pool).

Update WebDAV door to respond will all matching, known checksum values
if client included a multi-algorithm `Want-Digest` header on GET or HEAD
requests.

Result:

dCache now supports accepting data (via HTTP or HTTP-TPC) and
calculating multiple client-requests checksum algorithms.

Querying checksums via RFC 3230 now supports returning multiple
checksums.

Target: master
Request: 10.2
Requires-notes: yes
Requires-book: no